fix: make sidebar options visible in dark themes (#371)
- Remove styles from shell.component.scss and sidenav.component.scss which are overriding the styles provided by angular material theme scss file.

Fixes: #366

--- a/src/app/core/shell/sidenav/sidenav.component.scss
+++ b/src/app/core/shell/sidenav/sidenav.component.scss
@@ -4,7 +4,6 @@
     width: 100%;
     height: 100%;
     padding-top: 20%;
-    background: hsla(0, 0%, 100%, 0.95);
   }
 
   img {
